--- a/style.css
+++ b/style.css
@@ -1,47 +1,58 @@
 body {
-    font-family: 'Roboto Condensed', 'Pragati Narrow', Arial, sans-serif;
-    font-size: 1.3rem;
-    color: #f1f1f1;
-    background: #1f2023;
-    text-align: center;
+  font-family: 'Roboto Condensed', 'Pragati Narrow', Arial, sans-serif;
+  font-size: 1.3rem;
+  color: #f1f1f1;
+  background: #1f2023;
+  text-align: center;
 }
 
-.hide {
-    display: none !important;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
-button[type="button"]{
-    background: rgba(0, 0, 0, 0.25);
-    outline: none;
-    padding: 8px;
-    border-radius: 12px;
-    font-weight: 700;
-    color: #f1f1f1;
-    cursor: pointer;
-    border: 2px solid #335796;
+.row {
+  margin-bottom: 10px;
 }
 
-button[type='button']:hover {
-    background: rgba(255, 255, 255, 0.2) !important;
+label {
+  margin-right: 5px;
 }
 
-.clicked {
-    background: rgba(255, 255, 255, 0.1) !important;
-    font-weight: 700;
+input[type="number"] {
+  width: 50px;
 }
 
-textarea, input[type="text"] {
-    resize: none;
-    background: #0a0a0b;
-    color: white;
-    font-size: 1.1rem;
-    border: 2px solid #555;
+input[type="text"] {
+  width: 100px;
 }
 
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+button {
+  margin-right: 5px;
+  background: rgba(0, 0, 0, 0.25);
+  outline: none;
+  padding: 8px;
+  border-radius: 12px;
+  font-weight: 700;
+  color: #f1f1f1;
+  cursor: pointer;
+  border: 2px solid #335796;
+}
+
+button:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+#result-normal,
+#multiply-result-normal {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+#result-scientific,
+#multiply-result-scientific {
+  display: inline-block;
+  font-style: italic;
 }
