--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
   margin-top: 50px;
 }
 
+.block {
+  border: 2px solid #335796;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
 .row {
   margin-bottom: 10px;
 }
